tests/fail/test-neg-main-with-params.ctds

bool main(integer a){
  return true;
}